# baselibs

./: .bazelrc  .clang-format  .clang-tidy-minimal  .gitignore  .pre-commit-config.yaml  .yamlfmt  BUILD  Cargo.toml  MODULE.bazel  NOTICE  README.md  cr_checker_exclusion  qemu.bzl  ruff.toml  rustfmt.toml  versions.json
.github/: CODEOWNERS  RELEASE_TEMPLATE.md
.github/workflows/: build.yml  build_and_test_host_gcc12.yml  build_linux.yml  build_qnx.yml  cargo_required.yml  copyright.yml  coverage_report.yml  format.yml  lint.yml  lint_clippy.yml  lint_fmt_clippy.yml  release.yml  release_verification.yml  restricted_paths.yml  rust_coverage.yml  sanitizers_linux.yml  test_and_docs.yml  tests.yml
bazel/: aragen_tree.bzl  arxmlgen.bzl  franca2arxml.bzl  middleware.bzl  unit_tests.bzl
docs/: conf.py  index.rst
docs/json/: index.rst
examples/integration/: main.cpp
examples/log_builtin/: BUILD  Cargo.toml
examples/log_custom/: BUILD  Cargo.toml
main/: genindex.html  index.html  schema_violations.json  search.html
main/json/: index.html
score/analysis/: BUILD
score/bitmanipulation/: BUILD  bit_manipulation.cpp  bit_manipulation.h  bit_manipulation_test.cpp  bitmask_operators.cpp  bitmask_operators.h  bitmask_operators_test.cpp
score/concurrency/: BUILD  README.md  clock.cpp  clock.h  clock_test.cpp  compiler_featues.bzl  condition_variable.cpp  condition_variable.h  condition_variable_test.cpp  delayed_task.cpp  delayed_task.h  delayed_task_test.cpp  destruction_guard.cpp  destruction_guard.h  executor.h  executor_mock.cpp  executor_mock.h  executor_test.cpp  interruptible_conditional_variable_mock.cpp  interruptible_conditional_variable_mock.h  interruptible_interprocess_condition_variable.cpp  interruptible_interprocess_condition_variable.h  interruptible_wait.cpp  interruptible_wait.h  interruptible_wait_test.cpp  locked_ptr.h  locked_ptr_test.cpp  long_running_threads_container.cpp  long_running_threads_container.h  long_running_threads_container_test.cpp  notification.cpp  notification.h  notification_test.cpp  periodic_task.cpp  periodic_task.h  periodic_task_test.cpp  shared_task_result.cpp  shared_task_result.h  simple_task.cpp  simple_task.h  (+22 more)
score/containers/: BUILD  dynamic_array.cpp  dynamic_array.h  dynamic_array_test.cpp  intrusive_list.cpp  intrusive_list.h  intrusive_list_test.cpp  non_relocatable_vector.cpp  non_relocatable_vector.h  non_relocatable_vector_emplace_back_test.cpp  non_relocatable_vector_special_member_funcs_test.cpp  non_relocatable_vector_test.cpp
score/datetime_converter/: BUILD  DateTimeConverter.cpp  DateTimeConverter.h  datetime_converter.cpp  datetime_converter.h  datetime_converter_test.cpp  time_conversion.cpp  time_conversion.h  time_conversion_test.cpp
score/filesystem/: BUILD  README.md  error.cpp  error.h  error_test.cpp  file_status.cpp  file_status.h  file_status_test.cpp  filesystem.h  filesystem_mock.cpp  filesystem_mock.h  filesystem_struct.cpp  filesystem_struct.h  i_standard_filesystem.cpp  i_standard_filesystem.h  path.cpp  path.h  path_test.cpp  standard_filesystem_fake.cpp  standard_filesystem_fake.h  standard_filesystem_fake_test.cpp  standard_filesystem_mock.h
score/flatbuffers/: BUILD  load_buffer.hpp
score/json/: BUILD  README.md  i_json_parser.cpp  i_json_parser.h  i_json_parser_mock.h  i_json_writer.cpp  i_json_writer.h  i_json_writer_mock.h  json_parser.cpp  json_parser.h  json_serializer.cpp  json_serializer.h  json_serializer_test.cpp  json_test.cpp  json_writer.cpp  json_writer.h  json_writer_test.cpp
score/memory/: .clang-tidy-extra  BUILD  README.md  any_string_view.cpp  any_string_view.h  any_string_view_test.cpp  data_type_size_info.cpp  data_type_size_info.h  data_type_size_info_test.cpp  endianness.cpp  endianness.h  endianness_test.cpp  pmr_ring_buffer.h  pmr_ring_buffer_test.cpp  split_string_view.cpp  split_string_view.h  split_string_view_test.cpp  string_comparison_adaptor.cpp  string_comparison_adaptor.h  string_comparison_adaptor_test.cpp  string_literal.h
score/mw/: BUILD
score/mw/log/rust/: BUILD  Cargo.toml  README.md
score/network/: BUILD  i_socket.h  ipv4_address.cpp  ipv4_address.h  netutils.cpp  netutils.h  netutils_impl.cpp  netutils_impl.h  netutils_impl_linux.cpp  netutils_impl_qnx.cpp  udp_socket.cpp  udp_socket.h  vlan.cpp  vlan.h
score/os/: BUILD  ObjectSeam.h  README.md  acl.cpp  acl.h  acl_impl.cpp  acl_impl.h  arpa_inet.cpp  arpa_inet.h  capability.cpp  capability.h  cpuid.cpp  cpuid.h  dirent.cpp  dirent.h  dirent_impl.cpp  dirent_impl.h  dlfcn.h  dlfcn_impl.cpp  dlfcn_impl.h  errno.cpp  errno.h  errno_decl.h  errno_logging.cpp  errno_logging.h  fcntl.cpp  fcntl.h  fcntl_impl.cpp  fcntl_impl.h  file_stream.cpp  file_stream.h  getopt.cpp  getopt.h  getopt_impl.cpp  getopt_impl.h  glob.cpp  glob.h  glob_impl.cpp  glob_impl.h  grp.cpp  (+111 more)
score/result/: BUILD  README.md  dummy_error_code.h  error.cpp  error.h  error_code.cpp  error_code.h  error_domain.cpp  error_domain.h  error_msg_mapping.cpp  error_msg_mapping.h  error_msg_mapping_test.cpp  error_test.cpp  ffi_test_helpers.cpp  result.cpp  result.h  result.rs  result_cxx.h  result_example.rs  result_example_cpp.cpp  result_example_cpp.h  result_test.cpp  safe_result.h  safe_result_cxx.h  safe_result_example.cpp  safe_result_example_ffi.cpp  safe_result_example_ffi.h  static_design.puml  static_design.uxf  toolchain_flip.bzl
score/scope_exit/: BUILD  README.md  flag_owner.cpp  flag_owner.h  flag_owner_test.cpp  scope_exit.cpp  scope_exit.h  scope_exit_test.cpp
score/static_reflection_with_serialization/: BUILD
score/string_manipulation/: .clang-tidy-extra  BUILD
score/utils/: .clang-tidy-extra  BUILD  base64.cpp  base64.h  base64_test.cpp  pimpl_ptr.cpp  pimpl_ptr.h  pimpl_ptr_test.cpp  string_hash.cpp  string_hash.h  time_conversion.cpp  time_conversion.h  time_conversion_test.cpp
src/containers/: BUILD  Cargo.toml  lib.rs
src/elementary/: allocator_traits.rs  global_allocator.rs  lib.rs
src/log/: BUILD
src/sync/: arc_in.rs  (+1 more)
src/testing_macros/: BUILD  Cargo.toml  lib.rs
tests/: README.md
(+2035 files in other folders)
