[workspace]
resolver = "2"
# Split to default members without component integration tests.
# Used when executing cargo from project root.
default-members = []
# Include component integration tests as a member for IDE support and Bazel builds.
members = []


[workspace.package]
version = "0.0.1"
edition = "2021"
license-file = "LICENSE.md"
authors = ["S-CORE Contributors"]


[workspace.dependencies]


[workspace.lints.clippy]
std_instead_of_core = "warn"
alloc_instead_of_core = "warn"


[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
